# flet_podman_dex

./: .gitignore  99-podman-font.conf  99-podman-fonts.conf  AI_google.docker  AI_google.md  Dockerfile  fletdev.yaml  id_rsa  id_rsa.pub  mcptools.yaml  readme.md  sshserver.yaml
Example/exp_1/: README.md  pyproject.toml
Example/exp_1/src/: main.py
Example/exp_2/: README.md  pyproject.toml
Example/exp_3/: README.md
Example/exp_3/src/: main.py
Example/exp_3/src/Customs/: ColorTokenizer.py  DraculaTheme.py  filter.py  loger.py  lottery.py  setings.py
Example/exp_4/: pyproject.toml
Example/exp_4.1/: README.md
Example/exp_4.2/: pyproject.toml
Example/exp_4.2/src/: main.py
codex/: Code Recycle Bin  README.md  jackpot.md  lotter.jks  mcptools.yaml  pyproject.toml  run-flet.sh  working.py
codex/exp_2/src/: main.py
codex/exp_3/: README.md  pyproject.toml
codex/exp_3/src/: main.py
codex/exp_3/src/Customs/: Canvastopng.py  DraculaTheme.py  LotteryRendering.py  Savedialogbox.py  SnackBar.py  adbox.py  asyncredis.py  byterfiles.py  data.py  datamodle.py  dismiss.py  env_manager.py  filter.py  gen_id_manager.py  jackpot_core.py  loadfonts.py  loger.py  lotterMange.py  lottery.py  lotteryballs.py  mcp_fast.py  pad.py  setings.py  snack_bar.py  svgbase64.py
codex/exp_4.3/: README.md  pyproject.toml
codex/jackpot/: README.md  pyproject.toml
