[project]
name = "Lotter"
version = "0.1.3"
description = "Lotter application."
requires-python = ">=3.12.12"
authors = [
    { name = "JogFeelingVI", email = "glifelse@gmail.com" }
]

dependencies = [
  "flet[all]>=0.81.0",
  "requests==2.32.5",
  "urllib3==2.5.0",
  "chardet==6.0.0",
  "charset_normalizer==3.4.3"
]

[tool.flet]
path = "main.py" # 明确指定入口文件
bundle_id = "com.flet.lotter"

[tool.uv]
managed = true # 声明由 uv 管理

