[project]
name = "Lotter"
version = "0.1.3"
description = "Lotter application."
requires-python = ">=3.12.12"
authors = [
    { name = "JogFeelingVI", email = "glifelse@gmail.com" }
]

dependencies = [
  "flet[all]>=0.81.0",
  "requests",
]

[tool.flet]
path = "main.py" # 明确指定入口文件
bundle_id = "com.flet.lotter"

[tool.uv]
managed = true # 声明由 uv 管理

